--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: altCipher
 author: Tony Cavella
 
 # Short bio or description (displayed in the header)
-description: DevOps and Security scripts and resources
+description: Dev/Sec-Ops and Resources
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/reverie.png
@@ -45,8 +45,8 @@ google_analytics: #UA-43339302-11
 
 # Your website URL (e.g. http://amitmerchant1990.github.io or http://www.amitmerchant.com)
 # Used for Sitemap.xml and your RSS feed
-url: http://altcipher.github.io
-enforce_ssl: https://altcipher.github.io
+url: http://altcipher.com
+enforce_ssl: https://altcipher.com
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
