--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author: Tony Cavella
 description: Dev/Sec-Ops and Resources
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/reverie.png
+avatar: /images/3858_Custodian_D_01c.png
 
 #
 # Flags below are optional
